trying to fix collection-see-all from overflowing on mobile

--- a/css/sass/media_queries/_media_queries.scss
+++ b/css/sass/media_queries/_media_queries.scss
@@ -131,7 +131,8 @@
 
     .collection-see-all {
         padding: 0;
-        width: 100%;
+        width: auto;
+        max-width: 100%;
         margin-bottom: 20px;
     }
 
